--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="scripts/script.js" defer></script>
+    <link href="stylesheets/stylesheet.css"
 </head>
 <body>
-    <h2>Let's try some JavaScript</h2>
+    <!-- <h2>Let's try some JavaScript</h2>
     <p id="radius">Value provided by the user</p>
-    <p id="result">Show area or Error</p>
+    <p id="result">Show area or Error</p> -->
+    <ul class="shopping circlelist">Remember to buy:</ul>
 </body>
 </html>
